<resources>
    <!-- Start Common Block -->
    <string name="common_back">Назад</string>
    <string name="common_name">Имя или никнейм</string>
    <string name="common_save">Сохранить</string>
    <string name="common_no">Нет</string>
    <string name="common_delete">Удалить</string>
    <!-- End Common Block -->

    <!-- Start Welcome Block -->
    <string name="signup_title">Привет!</string>
    <string name="signup_subtitle">Давай знакомиться!</string>
    <!-- End Welcome Block -->

    <!-- Start Favourites Block -->
    <string name="favourites_fragment_title">Избранное</string>
    <!-- End Favourites Block -->

    <string name="app_name">Диалектика</string>
    <string name="title_home">Каталог</string>
    <string name="title_sign_up">Вход</string>
    <string name="title_personal">Разговоры</string>
    <string name="title_talk">Собеседник</string>
    <string name="themes_title">Themes</string>
    <string name="add_to_fav">В избранное</string>
    <string name="add_to_personal">В разговор</string>
    <string name="next">Дальше</string>
    <string name="info_home_page_user">Привет, %s!\nВыберите раздел или воспользуйтесь рандомайзером</string>
    <string name="info_for_owner">Личное: темы, идеи, заметки</string>
    <string name="info_home_page">Выберите интересующий вас раздел и добавьте себе новую тему</string>
    <string name="info_login">Кнопка справа от поля ввода сохраняет введенный интерес.</string>
    <string name="enter_name">Введите никнейм/имя</string>
    <string name="enter_interests">Введите интерес: f.e. история</string>
    <string name="enter_new_interest">Введите новый интерес:</string>
    <string name="login_btn">Войти</string>
    <string name="empty">Здесь пока ничего нет…</string>
    <string name="add_new_person">Добавить нового собеседника</string>
    <string name="error_empty_name">Введите никнейм или имя!</string>
    <string name="dialog_btn_add">Добавить</string>
    <string name="info_delete_person">Вы уверены, что хотите удалить собеседника «%s»? Отменить это действие невозможно.</string>
    <string name="info_delete_question">Вы уверены, что хотите удалить тему «%s»? Отменить это действие невозможно.</string>
    <string name="random">Random</string>
    <string name="own_interests">Приятной беседы, %s!\nВаши интересы:</string>
    <string name="interests">%s\nИнтересы:</string>
    <string name="add_new_question">Добавить новую тему</string>
    <string name="notes">Заметки</string>
    <string name="info_new_question">Что вам хочется обсудить?</string>
    <string name="enter_new_question">Введите новую тему</string>
    <string name="successful_added">Добавлено</string>
    <string name="need_to_add_person">Сначала добавьте собеседника</string>
    <string name="successful_deleted">Удалено</string>
    <string name="title_themes">Разделы</string>

    <!--    Home Screen -->
    <string name="add_personal">Добавить в контакты</string>
    <string name="add_favorite">Добавить в избранное</string>
</resources>
