<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dialectica.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_personal"
            app:destination="@id/navigation_personal"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favourite"
            app:destination="@id/navigation_favourite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.dialectica.presentation.favourite.FavouriteFragment"
        android:label="@string/favourites_fragment_title"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.dialectica.presentation.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" >
        <action
            android:id="@+id/action_navigation_personal_to_navigation_talk"
            app:destination="@id/navigation_talk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.example.dialectica.presentation.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk" />
</navigation>
