<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    app:cardCornerRadius="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_info"
            android:layout_margin="20dp"
            app:tint="?android:attr/textColorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/info_delete_person"
            android:textSize="16sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/AddButton"
                android:id="@+id/btn_no"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/common_no"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="1"
                app:icon="@drawable/ic_return"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:iconTint="?android:attr/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                style="@style/AddButton"
                android:id="@+id/btn_yes"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/common_delete"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="1"
                app:icon="@drawable/ic_check"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:iconTint="?android:attr/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
