<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    app:cardCornerRadius="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_info"
            android:layout_margin="20dp"
            app:tint="?android:attr/textColorPrimary"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="6dp"
            android:textSize="16sp"
            android:text="@string/info_login"
            android:fontFamily="@font/lato_regular"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            app:boxBackgroundColor="?android:attr/textColorPrimaryInverse">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:textColor="?android:attr/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/til_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:backgroundTintMode="src_atop"
            android:layout_gravity="center"
            app:boxBackgroundColor="?android:attr/textColorPrimaryInverse">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_interests"
                android:textColor="?android:attr/textColorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_add_interest"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_check"
                app:tint="?android:attr/textColorPrimary"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_own_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_interest"
            tools:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/AddButton"
                android:id="@+id/btn_return"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/common_back"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="1"
                app:icon="@drawable/ic_return"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:iconTint="?android:attr/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                style="@style/AddButton"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/login_btn"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_weight="1"
                app:icon="@drawable/ic_person_menu"
                app:iconGravity="textStart"
                app:iconSize="24dp"
                app:iconTint="?android:attr/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
