<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.talk.TalkFragment">

    <LinearLayout
        android:id="@+id/ll_person_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_for_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="9dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_for_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lato_regular"
                android:lineSpacingExtra="6dp"
                android:text="@string/info_for_owner"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="9dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_own_interests"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="3"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/interests"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/btn_add_interest"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_add"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_interests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_grey"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_add_person"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_interest"
                    tools:visibility="visible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            style="@style/AddButton"
            android:id="@+id/btn_add_new_question"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:foreground="@drawable/bg_corner_button"
            android:text="@string/add_new_question"
            app:icon="@drawable/ic_inkwell"
            app:iconGravity="textEnd"
            app:iconSize="24dp"
            app:iconTint="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_questions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"
        android:background="@color/light_grey"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_person_card"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_question" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_magic_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/ic_magic"
        android:contentDescription="@string/random"
        app:elevation="6dp"
        app:backgroundTint="@color/lavender"
        app:maxImageSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
