<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fr_personal"
    tools:context=".ui.personal.PersonalFragment">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="6dp"
        android:textSize="16sp"
        android:text="@string/please_login"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        style="@style/AddButton"
        android:id="@+id/btn_login"
        android:layout_gravity="center"
        android:text="@string/login_btn"
        android:fontFamily="@font/lato_regular"
        app:icon="@drawable/ic_person_menu"
        app:iconGravity="start"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="9dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_own_interests"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/own_interests"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:lineSpacingExtra="6dp"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/btn_add_interest"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add"
                    tools:ignore="contentDescription" />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_own_interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_person"
                tools:itemCount="3"
                tools:listitem="@layout/item_interest"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        style="@style/AddButton"
        android:id="@+id/btn_add_person"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:foreground="@drawable/bg_corner_button"
        android:text="@string/add_new_person"
        android:fontFamily="@font/lato_regular"
        app:icon="@drawable/ic_open"
        app:iconGravity="textEnd"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_hello" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_persons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@color/light_grey"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_person"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_person"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
